--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+* {
+  padding: 0%;
+  margin: 0%;
+}
+
+header {
+  background-color: #2994F2;
+  height: 4em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 1em;
+}
+
+.logo {
+  width: 20em;
+  padding-bottom: 1em;
+}
+
 .top-bar {
   align-items: center;
   display: flex;
@@ -28,17 +48,21 @@
   flex-basis: 70%;
   flex-wrap: wrap;
   justify-content: center;
+  background-color: #F3F3F3;
+  padding-top: 1.4em;
 }
 
 .item {
-  border: 2px solid blue;
-  border-radius: 5px;
+  border-radius: 10px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding: 0.8em;
   height: auto;
   margin: 5px;
   width: 200px;
+  background-color: rgb(255, 255, 255);
 }
 
 .item .item__sku {
@@ -53,24 +77,68 @@
 
 .item .item__image {
   width: 100%;
+  height: 8em;
 }
 
 .item .item__add {
-  background-color: green;
+  background-color: #010D26;
+  color: white;
+  border-radius: 10px;
+  width: 80%;
   border: 0;
   cursor: pointer;
   margin: 0;
   padding: 5px;
 }
 
+.item:hover {
+  transform: scale(1.1);
+  box-shadow: 0 5px 15px rgba(0,0,0,0.6);
+}
+
 .cart {
   display: flex;
   flex-basis: 30%;
   flex-flow: column wrap;
+  align-items: center;
 }
 
 .cart .cart__title {
   flex-basis: 1;
   font-size: 16pt;
   text-align: center;
+  padding-top: 1em;
+}
+
+.empty-cart {
+  background-color: #010D26;
+  color: white;
+  border: none;
+  height: 3em;
+  width: 80%;
+  border-radius: 10px;
+  margin: 1.5em;
+}
+
+.cart__items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.div_itens_cart {
+  display: flex;
+  align-items: center;
+  border: 1em;
+}
+
+.cart__item {
+  width: 80%;
+  padding-bottom: 1em;
+  padding-right: 2em;
+}
+
+.img_cart {
+  padding-right: 2em;
+  padding-left: 1em;
 }
