--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ header {
   display: flex;
   justify-content: space-around;
   width: 100%;
+  background-color: #F3F3F3;
 }
 
 .items {
@@ -101,23 +102,15 @@ header {
   flex-basis: 30%;
   flex-flow: column wrap;
   align-items: center;
+  background-color: rgb(255, 255, 255);
+  border-radius: 1em;
 }
 
 .cart .cart__title {
   flex-basis: 1;
-  font-size: 16pt;
+  font-size: 2em;
   text-align: center;
   padding-top: 1em;
-}
-
-.empty-cart {
-  background-color: #010D26;
-  color: white;
-  border: none;
-  height: 3em;
-  width: 80%;
-  border-radius: 10px;
-  margin: 1.5em;
 }
 
 .cart__items {
@@ -130,16 +123,45 @@ header {
   display: flex;
   align-items: center;
   border: 1em;
-  background-color: blue;
+  border: #010D26 solid 1px;
+  border-radius: 10px;
+  width: 85%;
+  margin-top: 1em;
 }
 
 .cart__item {
   width: 80%;
   padding-bottom: 1em;
   padding-right: 2em;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  padding-top: 0.5em;
 }
 
 .img_cart {
   padding-right: 2em;
   padding-left: 1em;
+}
+
+.empty-cart {
+  background-color: #010D26;
+  color: white;
+  border: none;
+  height: 3.7em;
+  width: 60%;
+  border-radius: 10px;
+  margin: 1.5em;
+}
+
+.total-price {
+  margin-top: 2em;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border: #010D26 solid 1px;
+  border-radius: 10px;
+  padding: 1em;
+  width: 50%;
+  text-align: center;
+  background-color: #010D26;
+  color: white;
 }
